# Cagy

./: CMakeLists.txt  README.md  todo.txt
SourceFiles/: Core.hh  Main.cc  Window.cc  Window.hh
common/: component_props.h
components/: rect_2d.h
core/: window.c
test/: more_verticles.py
